# Bingo-Agent-Simulation

./: .gitignore  pyproject.toml  readme.md
simulation/: __init__.py  agent_base.py  log_memory.py  main.py  monitor_outputs.py  prompt_template.txt
simulation/agents_personas/: AK.txt  DT.txt  EH.txt  MP.txt  RO.txt  SG.txt  bar.txt  foo.txt
simulation/bingo_boards/: .~lock.alumni_censored_simple.csv#  alumni-simple-boards.json  alumni_censored_simple.csv  generate_personalities.py
simulation/bingo_boards/generated_personalities/: JT.txt  KY.txt  NC.txt  TR.txt
simulation/bingo_boards/input/: AK.json  DT.json  EH.json  JT.json  KY.json  MP.json  NC.json  RO.json  SG.json  TR.json
simulation/configs/: config.yaml
simulation/configs/agent/: agent.yaml  config.yaml
simulation/configs/conversation/: conversation.yaml
simulation/configs/environment/: default.yaml  test.yaml  time_dependent.yaml  time_independent.yaml
simulation/configs/paths/: default.yaml
simulation/core/: agent_manager.py  bingo_manager.py  conversation_manager.py  memory_manager.py
simulation/environments/: __init__.py  base_environment.py  environment_factory.py  random_pairs.py  test_environment.py  time_dependent.py  time_independent.py
simulation/outputs/: conversation_1afbf1c9-36a1-4bd3-a31b-62bb9a5238ab.json  conversation_9f42dc4f-12fa-492a-87a1-94a24f016be4.json  conversation_log_1.json
simulation/utils/: __init__.py  agent_base.py  bingo_loader.py  log_memory.py  token_counter.py  token_tracker.py
